bodhi-aws-main/deployment/distribution/superset/superset-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: superset-gateway
  namespace: superset
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - superset.bodhimlops.xyz
      port:
        name: http
        number: 80
        protocol: HTTP
      # Upgrade HTTP to HTTPS
      tls:
        httpsRedirect: true
    - hosts:
        - superset.bodhimlops.xyz
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: superset-ingressgateway-certs
